@@ -1,4 +1,4 @@
-/* $OpenBSD: kex.c,v 1.72 2006/07/22 20:48:23 stevesk Exp $ */
+/* $OpenBSD: kex.c,v 1.73 2006/07/26 02:35:17 stevesk Exp $ */
 /*
  * Copyright (c) 2000, 2001 Markus Friedl.  All rights reserved.
  *
@@ -24,6 +24,8 @@
  */
 
 #include "includes.h"
+
+#include <sys/param.h>
 
 #include <openssl/crypto.h>
 
